--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+
+  <script src="https://kit.fontawesome.com/bfa6ed3b7f.js" crossorigin="anonymous"></script>
+
   <title>React Redux App</title>
 </head>
 
